fix(web): clean rebuild with correct base-href /spotify-ai-music-app/ for GitHub Pages

--- a/web/callback.html
+++ b/web/callback.html
@@ -29,7 +29,7 @@
                     window.close();
                 } else {
                     // Fallback: redirect to main page with token in URL
-                    window.location.href = '/#access_token=' + accessToken + '&expires_in=' + expiresIn;
+                    window.location.href = '/spotify-ai-music-app/#access_token=' + accessToken + '&expires_in=' + expiresIn;
                 }
             }
         });
